--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <sectionclass="card" id="git-section">
         <h2>Git</h2>
-        <usl>
+        <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
@@ -48,7 +48,9 @@
       <sectionclass="card" id="Javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>If else if else is a great way to execute different tasks given different conditions.</li>
         </ul>
 
       </section>
